fix: It adjusts styles, translation, and validation for the entire system. As well as... checking publications adds and verifies the status of publications on platforms.

--- a/resources/js/locales/en.json
+++ b/resources/js/locales/en.json
@@ -339,6 +339,7 @@
         "publishing":"Publishing...",
         "platforms":"Platforms",
         "failed":"Failed",
+        "removed":"Removed",
         "youtube":{
           "youtubeThumbnails":"YouTube Thumbnails"
         },
@@ -358,6 +359,11 @@
           "cancel":"Cancel",
           "change":"Change"
         }
+      },
+      "preview":{
+          "title":"preview",
+          "simulated": "simulated",
+          "real": "Real"
       },
       "validation":{
         "descRequired":"Description is required",
