--- a/resources/js/locales/es.json
+++ b/resources/js/locales/es.json
@@ -3,6 +3,12 @@
     "welcome": "Bienvenido",
     "loading": "Cargando...",
     "select": "Seleccionar",
+    "more": "Más",
+    "new": "Nuevo",
+    "totalSettings": "Total de Ajustes",
+    "unsavedChanges": "Cambios no guardados",
+    "configured":"Configurado",
+    "allSaved":"Todo guardado",
     "refresh": "Recargar",
     "save": "Guardar",
     "cancel": "Cancelar",
@@ -43,7 +49,8 @@
     "no": "No",
     "configure": "Configurar",
     "noSettings": "Sin ajustes por defecto",
-    "adjustOptions": "Ajustar opciones específicas"
+    "adjustOptions": "Ajustar opciones específicas",
+    "viewOnPlatform": "Ver en plataforma"
   },
   "nav": {
     "dashboard": "Panel",
@@ -52,6 +59,7 @@
     "manageContent": "Gestionar Contenido",
     "analytics": "Analíticas",
     "aiChat": "Chat IA",
+    "socialNetworks": "Redes Sociales",
     "logout": "Cerrar Sesión",
     "notifications": "Notificaciones"
   },
@@ -225,13 +233,19 @@
         }
       },
       "platformSettings": {
+        "status":"Estado",
+        "save":"Guardar",
+        "configured":"Configurar",
         "title": "Configuraciones por Plataforma",
         "subtitle": "Configuraciones por Plataforma",
         "youtube": {
           "title": "YouTube",
           "type": "Tipo de Video",
           "video": "Video Normal",
+          "videoStandard": "Video estándar",
+          "contentType": "Tipo de Contenido",
           "short": "Shorts",
+          "shortVertical": "Video Vertical Shorts",
           "privacy": "Privacidad",
           "public": "Público",
           "private": "Privado",
@@ -242,25 +256,37 @@
           "title": "Facebook",
           "type": "Tipo de Publicación",
           "feed": "Publicación del Muro",
-          "reel": "Reel"
+          "feedDescription": "Publicación del Muro",
+          "reel": "Reel",
+          "reelDescription": "Video corto vertical"
         },
         "instagram": {
           "title": "Instagram",
           "type": "Tipo de Publicación",
           "feed": "Publicación del Feed",
+          "feedDescription": "Publicación del Feed",
           "reel": "Reel",
-          "story": "Historia"
+          "reelDescription": "Video corto vertical",
+          "story": "Historia",
+          "storyDescription": "Historia"
         },
         "tiktok": {
           "title": "TikTok",
           "privacy": "Privacidad",
           "public": "Público",
+          "publicDescription": "Todos pueden ver",
           "friends": "Solo Amigos",
+          "friendsDescription": "Solo tus amigos pueden ver",
           "private": "Privado",
+          "privateDescription": "Solo tú",
           "interactions": "Interacciones",
+          "interactionsDescription": "Permitir interacciones",
           "comments": "Comentarios",
+          "commentsDescription": "Permitir comentarios",
           "duets": "Dúo",
-          "stitchs": "Pegar"
+          "duetsDescription": "Permitir dúos",
+          "stitchs": "Pegar",
+          "stitchsDescription": "Permitir pegar"
         },
         "twitter": {
           "title": "Twitter (X)",
@@ -336,7 +362,7 @@
         "contentLockedHint": "Para editar el contenido (título, descripción o archivos), debes despublicar la publicación de todas las plataformas."
       },
       "manageContent": {
-        "configureNetworks": "Configura tus redes sociales"
+        "configureNetworks": "Configura tus publicaciones programadas"
       },
       "publish":{
         "title":"Publicar",
@@ -376,7 +402,8 @@
       "preview":{
           "title":"Vista Previa",
           "simulated": "Simulado",
-          "real": "Real"
+          "real": "Real",
+          "realInfo": "Vista Previa Real"
       },
 
       "validation":{
@@ -406,7 +433,8 @@
         "schedulePublicationLength":"Programar Publicación debe tener al menos 10 caracteres",
         "imageRequired":"Imagen es requerida",
         "hashtagValid":"Hashtag debe tener al menos 10 caracteres",
-        "hashtagMax":"Hashtag debe tener menos de 10 caracteres"
+        "hashtagMax":"Hashtag debe tener menos de 10 caracteres",
+        "scheduleDateRequired": "Por favor, selecciona una fecha para programar la publicación o desmarca la opción de programar"
       }
     },
     "status":{
@@ -418,7 +446,6 @@
       "deleted":"Eliminado"
     },
     "platformSettings":{
-
       "title":"Configuración de Plataforma",
       "subtitle":"Configuración de Plataforma",
       "account":"Cuenta",
