fix: Adjust post size and delete unnecessary comments in controller

--- a/resources/js/locales/en.json
+++ b/resources/js/locales/en.json
@@ -459,6 +459,7 @@
       "status": "Status",
       "actions": "Actions",
       "noCampaign": "No Campaign",
+      "noPlatforms": "No platforms configured",
       "loading": "Loading...",
       "linkedAccount": "Linked Accounts",
       "emptyState": {
