fix: delete unncesary comments and console.log

--- a/resources/js/locales/en.json
+++ b/resources/js/locales/en.json
@@ -5,6 +5,8 @@
     "select": "Select",
     "more": "more",
     "new": "New",
+    "listView": "List View",
+    "gridView": "Grid View",
     "unsavedChanges": "Unsaved Changes",
     "totalSettings": "Total settings",
     "configured": "Configured",
