fix: adjust removed_on_platform in log list and in translation files

--- a/resources/js/locales/en.json
+++ b/resources/js/locales/en.json
@@ -791,6 +791,7 @@
       "pending": "Pending",
       "published": "Published",
       "deleted": "Deleted",
+      "removed_on_platform": "Removed on Platform",
       "orphaned": "Orphaned"
     },
     "empty": "No logs found",
