fix: select field settings in edit publication, and total log filters are added in the logs section

--- a/resources/js/locales/en.json
+++ b/resources/js/locales/en.json
@@ -779,6 +779,7 @@
   },
   "logs": {
     "title": "Activity Logs",
+    "subtitle": "Activity Logs",
     "refresh": "Refresh",
     "filters": {
       "campaign": "Filter by Campaign",
@@ -803,6 +804,7 @@
       "more": "More"
     },
     "status": {
+      "all": "All",
       "success": "Success",
       "failed": "Failed",
       "pending": "Pending",
