feta: Set Profile Information and set the phone number entry with its corresponding callsigns

--- a/resources/js/locales/en.json
+++ b/resources/js/locales/en.json
@@ -5,6 +5,7 @@
     "select": "Select",
     "more": "more",
     "new": "New",
+    "saving": "saving...",
     "listView": "List View",
     "gridView": "Grid View",
     "unsavedChanges": "Unsaved Changes",
