--- a/resources/js/locales/es.json
+++ b/resources/js/locales/es.json
@@ -5,6 +5,7 @@
     "select": "Seleccionar",
     "more": "Más",
     "new": "Nuevo",
+    "saving": "Guardando...",
     "listView": "Vista de Lista",
     "gridView": "Vista de Grilla",
     "totalSettings": "Total de Ajustes",
