--- a/resources/js/locales/en.json
+++ b/resources/js/locales/en.json
@@ -1017,16 +1017,15 @@
     }
   },
   "aiAssistant": {
-    "welcomeMessage": "Hi! I'm your AI assistant. I can help you with campaign ideas, content improvement, or analyzing your performance. How can I help you today?",
+    "welcomeMessage": "I am here to help you with your social media campaigns. You can ask me about creating new campaigns, improving existing ones, or analyzing your content performance.",
     "error": "I apologize, but I encountered an error processing your request. Please try again later.",
     "suggestion": "Suggestion",
     "thinking": "Thinking...",
     "askPlaceholder": "Ask about your campaigns...",
     "buttonLabel": "Ask AI Assistant",
     "headerTitle": "AI Assistant",
-    "subtitle": "Pregunta a la IA cualquier cosa. ",
-    "tips": "consejo"
-
+    "subtitle": "Ask your AI assistant anything.",
+    "tips": "Tips"
   },
   "analytics": {
     "title": "Analytics & Statistics",
